--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,42 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <!-- FAVICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!-- TBD ADD PUBLIC URL AND FIX SAFARI FAVICON-->
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#000000" />
+
+    <!-- HTML Meta Tags -->
+
+    <meta name="apple-mobile-web-app-title" content="Defect" />
+    <meta name="application-name" content="Defect" />
+    <meta name="theme-color" content="#000000" />
+
+    <title>Defect</title>
+    <meta name="description" content="TBD write description" />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Defect" />
+    <meta itemprop="description" content="TBD Description" />
+    <meta itemprop="image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="defectkw.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Defect" />
+    <meta property="og:description" content="TBD Description" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Defect" />
+    <meta name="twitter:description" content="TBD Description" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +56,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>TBD description</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
