--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     -->
   </head>
   <body>
-    <noscript>TBD description</noscript>
+    <noscript>All for the youth.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
