Updated meta description

--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,24 @@
     <meta name="theme-color" content="#000000" />
 
     <title>Defect</title>
-    <meta name="description" content="TBD write description" />
+    <meta name="description" content="All for the youth." />
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Defect" />
-    <meta itemprop="description" content="TBD Description" />
+    <meta itemprop="description" content="All for the youth." />
     <meta itemprop="image" content="%PUBLIC_URL%/logo512.png" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="defectkw.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Defect" />
-    <meta property="og:description" content="TBD Description" />
+    <meta property="og:description" content="All for the youth." />
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Defect" />
-    <meta name="twitter:description" content="TBD Description" />
+    <meta name="twitter:description" content="All for the youth." />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
